SyntacticAnalyzer/tests/fail/clase01.java
class foo1 {
// nunca cierra




class foo2 {



}




